crates/htui/tests/snapshots/personas__import_report.snap
---
source: crates/htui/tests/personas.rs
expression: report
---
imported 1 · refused 2 · skipped 1
+ code-architect (/srv/agents/code-architect.md) — dropped from `tools`: `mcp__gortex__search`,
  `mcp__gortex__read` — `allow` keeps built-in tools only
! /srv/agents/gortex-search.md — every `tools` entry is an MCP tool; htui's `allow` keeps built-in
  tools only, so this file would keep all of them — write `disallowed-tools` or `deny-kinds` instead
! /srv/agents/reviewer.md — persona `reviewer` exists; edit it in Settings › Personas, or delete it
  and import again
· /srv/agents/README.md — no frontmatter: the file does not open with a `---` fence





















j/k scroll · Esc close
